--- a/Analiza_podatkov.ipynb
+++ b/Analiza_podatkov.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stanley Martin Lieber je živel med lei 1922 in 2018. Najprej si pogledam v katerih letih, je svetu predstavil največ likov."
+    "Stanley Martin Lieber je živel med leti 1922 in 2018. Najprej si pogledam v katerih letih, je svetu predstavil največ likov."
    ]
   },
   {
